--- a/index.html.template
+++ b/index.html.template
@@ -506,7 +506,7 @@ function clearElement(elem)
 }
 
 function selectRun(timings) {
-    return selectors.metric == 'cold' ? timings[0] : (timings[1] !== null && timings[2] !== null ? Math.min(timings[1], timings[2]) : null)
+    return selectors.metric == 'cold' ? timings[0] : (timings.some(timing => timing !== null) ? Math.min(...timings.slice(1)) : null)
 }
 
 function addNote(text) {
@@ -538,7 +538,7 @@ function renderSummary(filtered_data) {
     const num_queries = filtered_data[0].result.length;
 
     const baseline_data = [...filtered_data[0].result.keys()].map(query_num =>
-        [...Array(3).keys()].map(run_num =>
+        [...Array(5).keys()].map(run_num =>
             Math.min(...filtered_data.filter(elem => !elem.fake).map(elem => elem.result[query_num][run_num]).filter(x => x))));
 
     const min_data_size = Math.min(...filtered_data.map(elem => elem.data_size).filter(x => x));
